# LunchLog

./: .flake8  .gitignore  Dockerfile.dev  Dockerfile.prod  Makefile  README.md  README_DEPLOY_AWS.md  docker-compose.yml  env.example  manage.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
apps/receipts/: admin.py  apps.py  models.py  serializers.py  signals.py  test_models.py  urls.py  views.py
apps/receipts/migrations/: 0001_initial.py  0002_receipt_restaurant_receipt_receipt_restaurant_idx.py  0003_remove_receipt_receipt_restaurant_idx_and_more.py
apps/receipts/tests/: conftest.py  test_models.py  test_recipts_views.py  test_serializers.py  test_views.py
apps/restaurants/: models.py  serializers.py  services.py  tasks.py  test_models.py  tests.py  urls.py  views.py
apps/restaurants/migrations/: 0001_initial.py  0002_auto_20250920_1101.py  0003_cuisine_remove_restaurant_restaurant_cuisine_idx_and_more.py  0004_userrestaurantvisit_usercuisinestat.py
apps/restaurants/services/: __init__.py  recommendations.py  visit_tracking.py
apps/restaurants/tests/: test_receipt_integration.py  test_tasks.py  (+7 more)
apps/users/: admin.py  models.py  serializers.py  urls.py  views.py
deploy/cloudformation/: README_DEPLOY_AWS.md  ecs.yml
deploy/nginx/: nginx.conf
documentation/: mermeid_diagrams.md
lunchlog/: asgi.py  authentication.py  celery.py  permissions.py  urls.py  wsgi.py
lunchlog/settings/: __init__.py  base.py  development.py  original_settings.py  production.py  test.py
tests/: conftest.py  test_integration.py  test_settings.py
(+8 files in other folders)
