[tool.poetry]
name = "lunchlog"
version = "0.1.0"
description = "Office Lunch Receipt Management and Recommendation System"
authors = ["LunchLog Team <team@lunchlog.com>"]
readme = "README.md"
packages = [{include = "lunchlog"}]

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2.0"
djangorestframework = "^3.14.0" 
drf_yasg = "^1.21.7"
psycopg2-binary = "^2.9.0"
python-decouple = "^3.8"
django-cors-headers = "^4.3.0"
djangorestframework-simplejwt = "^5.3.0"
pillow = "^10.0.0"
dj-database-url = "^2.1.0"
django-extensions = "^3.2.0"
gunicorn = "^20.1.0"
whitenoise = "^6.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-django = "^4.5.0"
pytest-cov = "^4.1.0"
black = "^23.0.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
factory-boy = "^3.3.0"
faker = "^19.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_django = "django"
sections = ["FUTURE", "STDLIB", "DJANGO", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "lunchlog.settings.test"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "--cov=. --cov-report=html --cov-report=term-missing"
